hphp/test/zend/good/ext/ctype/tests/config.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded('ctype')) die('skip ctype extension not available');
}
