hphp/test/zend/bad/tests/basic/bug20539.php.skipif
<?php if (!extension_loaded("session")) die("skip session extension not available"); ?>
<?php unlink(__DIR__. '/sess_' .session_id()); ?>